syntax = "proto3";

package com.vbird.grpc.goods;

option go_package = "/rpc/goods";

service GoodsService {
  rpc GetGoodsById(GoodsRequest) returns (GoodsResponse) {}
  rpc CreateGoods(CreateGoodsRequest) returns (CreateGoodsResponse) {} // 新增创建商品方法
}

message GoodsRequest {
  string goods_id = 1;
}

message GoodsResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  string merchant_id = 4;
  string merchant_name = 5;
  string picture = 6;
  string description = 7;
}

// 创建商品请求
message CreateGoodsRequest {
  string name = 1;
  double price = 2;
  string merchant_id = 3;
  string merchant_name = 4;
  string picture = 5;
  string description = 6;
  string tag = 7;
}

// 创建商品响应
message CreateGoodsResponse {
  bool success = 1;
  string goods_id = 2;
  string message = 3;
  int32 code = 4;
}