syntax = "proto3";
package com.vbird.grpc.recommend;

option go_package = "/rpc/recommend";

service RecommendService {
  rpc GetRecommendations(RecommendRequest) returns (RecommendResponse) {}
}

message RecommendRequest {
  string user_id = 1;
}

message RecommendItem {
  string id = 1;
  string name = 2;
  double price = 3;
  string sellerid = 4;
  string seller = 5;
  string image_url = 6;
  string description = 7;
}

message RecommendResponse {
  repeated RecommendItem items = 1;
}